@@ -301,6 +301,9 @@ player_chat_wait_fraction_help      Maximum fraction of time to wait for a singl
 player_chat_wait_single_help        Set to 1 if only one player should get his chat wait time reduced at any given time.
 player_chat_wait_teamleader_help    Set to 1 if only team leaders, and 0 if all players, should be allowed to pause the timer.
 
+wait_for_external_script_help Let the server wait for an external script between two rounds until the script switches this setting back to 0.
+wait_for_external_script_timeout_help If the server has been paused by WAIT_FOR_EXTERNAL_SCRIPT for more seconds than this, kickstart the game.
+
 chatter_remove_time_help            Time in seconds after which a permanent chatter is removed from the game
 idle_remove_time_help               Time in seconds after which an inactive player is removed from the game
 idle_kick_time_help                 Time in seconds after which an inactive player is kicked
